adde newnode df

--- a/index2.org
+++ b/index2.org
@@ -2062,7 +2062,7 @@ query can be db.dataset.contact.like('Lach%')
     rgraphviz = F,
     nchar_to_snip = 40
     ){
-    if(rgraphviz == F){
+     if(rgraphviz == F){
   
     if(nchar(name) > 140) print("that's a long name. consider shortening this")
     if(nchar(desc) > nchar_to_snip) desc <- paste(substr(desc, 1, nchar_to_snip), "[...]")
@@ -2423,115 +2423,6 @@ query can be db.dataset.contact.like('Lach%')
 
 #+RESULTS: test-df-input
 : 0
-
-*** COMMENT test-df-input-code2
-#+name:test-df-input
-#+begin_src R :session *R* :tangle no :exports none :eval yes
-  #### name:test-df-input####
-  library(devtools)
-  load_all()
-  filesList <- read.csv(textConnection('
-  CLUSTER ,  FILE    , INPUTS                    , OUTPUTS                                , DESCRIPTION                      
-  A  ,  siteIDs      , GPS                       , spatial                                , latitude and longitude of sites  
-  A  ,  weather      , BoM                       , exposures                              , weather data from BoM            
-  B  ,  trapped      , spatial                   , trapped_no                             , counts of species caught in trap 
-  B  ,  biomass      , spatial                   , biomass_g                              ,                                  
-  B  ,  correlations , "exposures,trapped_no,biomass_g" , report1                         , A study we published             
-  C  ,  paper1       , report1                   , "open access repository, data package" ,                                  
-  D  ,  biomass revision, new estimates          , biomass_g                              , this came late
-  '), stringsAsFactors = F, strip.white = T)
-  str(filesList)
-  
-  indat = filesList
-  #,
-  names_col = "FILE"
-  #,
-  in_col = "INPUTS"
-  #,
-  out_col = "OUTPUTS"
-  #,
-  desc_col = "DESCRIPTION"
-  #,
-  clusters_col = "CLUSTER"
-  
-  ## # start the graph
-  rm(nodes_graph)
-  
-  cluster_ids <- names(table(indat[,clusters_col]))
-  cluster_ids
-  
-  for(cluster_i in cluster_ids){
-    #cluster_i <- cluster_ids[1]
-    indat2 <- indat[indat[,clusters_col] == cluster_i,]
-    indat2
-    
-    if(cluster_i == cluster_ids[1]){
-    nodes_graph <- sprintf('subgraph cluster_%s {
-    label = "%s"
-    ', cluster_i, cluster_i)
-  #cat(nodes_graph)
-  
-    i <- 1
-    nodes_graph <- newnode(name = indat2[i,names_col],
-                       inputs  = strsplit(indat2[,in_col ], ",")[[i]],
-                       outputs = strsplit(indat2[,out_col], ",")[[i]],
-                       graph = nodes_graph,
-                       newgraph = T
-                       )
-    # cat(nodes_graph)
-  
-  if(nrow(indat2) > 1){  
-    for(i in 2:nrow(indat2)){
-    # i <- 2
-    if(length(strsplit(indat2[,out_col], ",")[[i]]) == 0){
-      nodes_graph <- newnode(name = indat2[i,names_col],
-                       inputs = strsplit(indat2[,in_col], ",")[[i]]
-      )    
-    } else {
-      nodes_graph <- newnode(name = indat2[i,names_col],
-                       inputs = strsplit(indat2[,in_col], ",")[[i]],
-                       outputs = strsplit(indat2[,out_col], ",")[[i]]
-      )
-    }
-  }
-  }
-    nodes_graph  <- paste(nodes_graph, "}\n\n")
-  } else {
-    nodes_graph <- paste(nodes_graph, sprintf('subgraph cluster_%s {
-    label = "%s"
-    ', cluster_i, cluster_i))
-  #cat(nodes_graph)
-  if(nrow(indat2) == 1){  
-    i <- 1
-    nodes_graph <- newnode(name = indat2[i,names_col],
-                       inputs  = strsplit(indat2[,in_col ], ",")[[i]],
-                       outputs = strsplit(indat2[,out_col], ",")[[i]],
-                       graph = nodes_graph,
-                       newgraph = F
-                       )
-    # cat(nodes_graph)
-  } else {  
-    for(i in 2:nrow(indat2)){
-    # i <- 2
-    if(length(strsplit(indat2[,out_col], ",")[[i]]) == 0){
-      nodes_graph <- newnode(name = indat2[i,names_col],
-                       inputs = strsplit(indat2[,in_col], ",")[[i]]
-      )    
-    } else {
-      nodes_graph <- newnode(name = indat2[i,names_col],
-                       inputs = strsplit(indat2[,in_col], ",")[[i]],
-                       outputs = strsplit(indat2[,out_col], ",")[[i]]
-      )
-    }
-  }
-  }
-    nodes_graph  <- paste(nodes_graph, "}\n\n")
-  }
-  }
-  cat(nodes_graph)
-  
-  
-#+end_src
 *** COMMENT test2-code
 #+name:test2
 #+begin_src R :session *R* :tangle no :exports none :eval no
@@ -2581,6 +2472,110 @@ query can be db.dataset.contact.like('Lach%')
 ################################################################
 # name:newnode
 
+#+end_src
+
+** R-newnode_df
+*** COMMENT newnode_df-code
+#+name:newnode_df
+#+begin_src R :session *R* :tangle R/newnode_df.R :exports none :eval no
+  #### name:newnode_df####
+  
+  newnode_df <- function(indat = NA,names_col = "FILE",in_col = "INPUTS",out_col = "OUTPUTS",desc_col = "DESCRIPTION",clusters_col = "CLUSTER",nchar_to_snip = 40){
+  
+  # start the graph
+  cluster_ids <- names(table(indat[,clusters_col]))
+  #cluster_ids
+  
+  for(cluster_i in cluster_ids){
+    # cluster_i <- cluster_ids[1]
+  
+    if(cluster_i == cluster_ids[1]){
+      nodes_graph <- sprintf('subgraph cluster_%s {
+      label = "%s"
+      ', cluster_i, cluster_i)
+    } else {
+      nodes_graph <- paste(nodes_graph, sprintf('subgraph cluster_%s {
+      label = "%s"
+      ', cluster_i, cluster_i))  
+    }
+  #  cat(nodes_graph)    
+    indat2 <- indat[indat[,clusters_col] == cluster_i,]
+  #  indat2
+      for(i in 1:nrow(indat2)){
+        # i <- 1
+        #i
+        indat2[i,]
+        name <- indat2[i,names_col]
+        inputs <- unlist(lapply(strsplit(indat2[i,in_col], ","), str_trim))
+        outputs <- unlist(lapply(strsplit(indat2[i,out_col], ","), str_trim))
+        desc <- indat2[i,desc_col]
+  
+        if(nchar(name) > 140) print("that's a long name. consider shortening this")
+        if(nchar(desc) > nchar_to_snip) desc <- paste(substr(desc, 1, nchar_to_snip), "[...]")
+        name2paste <- paste('"', name, '"', sep = "")
+        inputs <- paste('"', inputs, '"', sep = "")
+        #inputs
+        inputs_listed <- paste(inputs, name2paste, sep = ' -> ', collapse = "\n")
+        #cat(inputs_listed)
+        outputs <- paste('"', outputs, '"', sep = "")  
+        outputs_listed <- paste(name2paste, outputs, sep = ' -> ', collapse = "\n")
+        #cat(outputs_listed)
+  strng <- sprintf('%s\n%s  [ shape=record, label="{{ { Name | Description } | { %s | %s } }}"]\n%s\n\n',
+                   inputs_listed, name2paste, name, desc, outputs_listed
+                   )
+        # cat(strng)
+        nodes_graph <- paste(nodes_graph, strng, "\n")
+        if(nrow(indat2) == 1) break
+      }
+  nodes_graph <- paste(nodes_graph, "}\n\n")
+  }
+  
+  nodes_graph <- paste("digraph transformations {\n\n",
+                       nodes_graph,
+                       "}\n")
+  
+  help_text <- c('# to run this graph
+  sink("fileTransformations.dot")
+  cat(nodes_graph)
+  sink()
+  system("dot -Tpdf fileTransformations.dot -o fileTransformations.pdf")
+  ')
+  cat(help_text)
+  return(nodes_graph)
+  }
+  
+#+end_src
+
+*** COMMENT test-df-input-code3
+#+name:test-df-input
+#+begin_src R :session *R* :tangle no :exports none :eval yes
+  #### name:test-df-input####
+  library(devtools)
+  load_all()
+  library(stringr)
+  ## filesList <- read.csv(textConnection('
+  ## CLUSTER ,  FILE    , INPUTS                    , OUTPUTS                                , DESCRIPTION                      
+  ## A  ,  siteIDs      , "GPS, helicopter"          , "spatial, site doco"                 , latitude and longitude of sites  
+  ## A  ,  weather      , BoM                       , exposures                              , weather data from BoM            
+  ## B  ,  trapped      , spatial                   , trapped_no                             , counts of species caught in trap 
+  ## B  ,  biomass      , spatial                   , biomass_g                              ,                                  
+  ## B  ,  correlations , "exposures,trapped_no,biomass_g" , report1                         , A study we published             
+  ## C  ,  paper1       , report1                   , "open access repository, data package" ,                                  
+  ## D  ,  biomass revision, new estimates          , biomass_g                              , this came late
+  ## '), stringsAsFactors = F, strip.white = T)
+  #write.csv(filesList, "fileTransformations.csv", row.names = F)
+  filesList <- read.csv("fileTransformations.csv", stringsAsFactors = F)
+  
+  str(filesList)
+  # filesList
+  
+  nodes_graphy <- newnode_df(indat = filesList, names_col = "STEP", in_col = "INPUTS", out_col = "OUTPUTS", desc_col = "DESCRIPTION", clusters_col = "CLUSTER", nchar_to_snip = 40)
+  
+  sink("fileTransformations.dot")
+  cat(nodes_graphy)
+  sink()
+  system("dot -Tpdf fileTransformations.dot -o fileTransformations.pdf")
+  
 #+end_src
 
 ** 2013-11-25-setting-up-a-workflow-script
