--- a/index2.org
+++ b/index2.org
@@ -5,6 +5,21 @@
 #+LaTeX_CLASS_OPTIONS: [a4paper]
 #+LATEX: \tableofcontents
 -----
+* DESCRIPTION-code
+#+name:DESCRIPTION
+#+begin_src R :session *R* :tangle DESCRIPTION :exports none :eval no :padline no
+Package: Disentangle
+Type: Package
+Title: Disentangle
+Version: 1.2
+Date: 2015-06-10
+Author: ivanhanigan
+Maintainer: <ivan.hanigan@gmail.com>
+Suggests: stringr, ggmap, maps, maptools, rgdal
+Description:  Functions I modified or created.
+License: GPL (>= 2)
+#+end_src
+
 
 * Data Documentation
 ** 2015-03-19-r-eml-to-mitigate-risks-in-morpho-metacat-data-publishing
@@ -521,7 +536,7 @@ eml_write(ds,
 
 *** TODO gIntersection
 #+name:gIntersection
-#+begin_src R :session *shell* :tangle code/gIntersection.R :exports none :eval no
+#+begin_src R :session *shell* :tangle no :exports none :eval no
   #### name:gIntersection ####
   #?gIntersection
   subset(ma_grid10@data, Id == 125)
@@ -583,6 +598,7 @@ eml_write(ds,
   setwd("..")
   
 #+end_src
+
 
 ** COMMENT aggregate-list-of-dfs
 #+name:aggregate
@@ -2647,11 +2663,23 @@ query can be db.dataset.contact.like('Lach%')
 *** COMMENT newnode_df-code
 #+name:newnode_df
 #+begin_src R :session *R* :tangle R/newnode_df.R :exports none :eval no
-  #### name:newnode_df####
+  #' @param indat the input data.frame
+  #' @param names_col the name of each edge (the boxes)
+  #' @param in_col the name of the nodes that are inputs to each edge with comma seperated vals.  whitespace will be stripped
+  #' @param out_col the nodes that are outputs of each edge.
+  #' @param desc_col description
+  #' @param clusters_col optional column identifying clusters
+  #' @param todo_col optional column with TODO status (DONE and WONTDO will be white, others are red)
+  #' @return character string object that has the DOT language representatio of the input
+  newnode_df <- function(indat = NA,names_col = NA,in_col = NA,out_col = NA,desc_col = NA,clusters_col = NA, todo_col = NA, nchar_to_snip = 40){
+  if(any(is.na(indat) |
+         is.na(names_col) |
+         is.na(in_col) |
+         is.na(out_col) |
+         is.na(desc_col)
+         )) stop("data or arguments are not supplied")
   
-  newnode_df <- function(indat = NA,names_col = "FILE",in_col = "INPUTS",out_col = "OUTPUTS",desc_col = "DESCRIPTION",clusters_col = "CLUSTER", todo_col = "STATUS", nchar_to_snip = 40){
-  
-  # start the graph
+  if(!is.na(clusters_col)){
   cluster_ids <- names(table(indat[,clusters_col]))
   #cluster_ids
   
@@ -2679,7 +2707,7 @@ query can be db.dataset.contact.like('Lach%')
         outputs <- unlist(lapply(strsplit(indat2[i,out_col], ","), str_trim))
         desc <- indat2[i,desc_col]
         status <- indat2[i,todo_col]
-
+  
         if(nchar(name) > 140) print("that's a long name. consider shortening this")
         if(nchar(desc) > nchar_to_snip) desc <- paste(substr(desc, 1, nchar_to_snip), "[...]")
         name2paste <- paste('"', name, '"', sep = "")
@@ -2702,7 +2730,48 @@ query can be db.dataset.contact.like('Lach%')
       }
   nodes_graph <- paste(nodes_graph, "}\n\n")
   }
+  } else {
+    indat2 <- indat
+    nodes_graph  <- ""
+  #  indat2
+      for(i in 1:nrow(indat2)){
+        # i <- 1
+        #i
+        indat2[i,]
+        name <- indat2[i,names_col]
+        inputs <- unlist(lapply(strsplit(indat2[i,in_col], ","), str_trim))
+        outputs <- unlist(lapply(strsplit(indat2[i,out_col], ","), str_trim))
+        desc <- indat2[i,desc_col]
   
+        if(nchar(name) > 140) print("that's a long name. consider shortening this")
+        if(nchar(desc) > nchar_to_snip) desc <- paste(substr(desc, 1, nchar_to_snip), "[...]")
+        name2paste <- paste('"', name, '"', sep = "")
+        inputs <- paste('"', inputs, '"', sep = "")
+        #inputs
+        inputs_listed <- paste(inputs, name2paste, sep = ' -> ', collapse = "\n")
+        #cat(inputs_listed)
+        outputs <- paste('"', outputs, '"', sep = "")  
+        outputs_listed <- paste(name2paste, outputs, sep = ' -> ', collapse = "\n")
+        #cat(outputs_listed)
+  if(!is.na(todo_col)){
+    status <- indat2[i,todo_col]
+         
+  strng <- sprintf('%s\n%s  [ shape=record, label="{{ { Name | Description | Status } | { %s | %s | %s } }}"]\n%s\n\n',
+                   inputs_listed, name2paste, name, desc, status, outputs_listed
+                   )
+        # cat(strng)
+        if(!status %in% c("DONE", "WONTDO")){ 
+          strng <- gsub("shape=record,", "shape=record, style = \"filled\", color=\"indianred\",", strng)
+        }
+  } else {
+    
+  strng <- sprintf('%s\n%s  [ shape=record, label="{{ { Name | Description } | { %s | %s } }}"]\n%s\n\n',
+                   inputs_listed, name2paste, name, desc, outputs_listed
+                   )
+  }
+        nodes_graph <- paste(nodes_graph, strng, "\n")
+  }
+  }
   nodes_graph <- paste("digraph transformations {\n\n",
                        nodes_graph,
                        "}\n")
@@ -2742,7 +2811,23 @@ query can be db.dataset.contact.like('Lach%')
   str(filesList)
   # filesList
   
-  nodes_graphy <- newnode_df(indat = filesList, names_col = "STEP", in_col = "INPUTS", out_col = "OUTPUTS", desc_col = "DESCRIPTION", clusters_col = "CLUSTER", todo_col = "STATUS", nchar_to_snip = 40)
+  nodes_graphy <- newnode_df(
+    indat = filesList
+    ,
+    names_col = "STEP"
+    ,
+    in_col = "INPUTS"
+    ,
+    out_col = "OUTPUTS"
+    ,
+    desc_col = "DESCRIPTION"
+    ,
+    clusters_col = "CLUSTER"
+    ,
+    todo_col = "STATUS"
+    ,
+    nchar_to_snip = 40
+    )
   
   sink("fileTransformations.dot")
   cat(nodes_graphy)
