fixed status todo col

--- a/index2.org
+++ b/index2.org
@@ -2720,13 +2720,14 @@ query can be db.dataset.contact.like('Lach%')
         outputs <- paste('"', outputs, '"', sep = "")  
         outputs_listed <- paste(name2paste, outputs, sep = ' -> ', collapse = "\n")
         #cat(outputs_listed)
+  if(!is.na(todo_col)){
+        
+        status <- indat2[i,todo_col]      
+        
   strng <- sprintf('%s\n%s  [ shape=record, label="{{ { Name | Description | Status } | { %s | %s | %s } }}"]\n%s\n\n',
                    inputs_listed, name2paste, name, desc, status, outputs_listed
                    )
         # cat(strng)
-  if(!is.na(todo_col)){
-        
-        status <- indat2[i,todo_col]      
         if(!status %in% c("DONE", "WONTDO")){ 
           strng <- gsub("shape=record,", "shape=record, style = \"filled\", color=\"indianred\",", strng)
         }
@@ -2835,7 +2836,7 @@ query can be db.dataset.contact.like('Lach%')
     ,
     clusters_col = "CLUSTER"
     ,
-    todo_col = "STATUS"
+    todo_col = NA #"STATUS"
     ,
     nchar_to_snip = 40
     )
