--- a/index2.org
+++ b/index2.org
@@ -610,6 +610,7 @@ eml_write(ds,
   civst_gend_sector$Survey.year[sample(1:nrow(civst_gend_sector), 4)] <- NA
   # some integer codes
   civst_gend_sector$ordinal_variable <-  as.character(round(sample(rnorm(10000,2.5,1), nrow(civst_gend_sector))))
+  civst_gend_sector$alphavar <- sample( letters, nrow(civst_gend_sector))
   str(civst_gend_sector)
   #debug(data_dict)
   data_dict(
@@ -668,7 +669,7 @@ eml_write(ds,
   order by ordering
   ", drv = "SQLite")
   col_defs <- col_defs[col_defs$Variable != "",]
-  col_defs
+  #col_defs
   
   vl <- as.data.frame(cbind(col_defs,t(variable_names[1,])))
   names(vl) <- c("variable_name", "simple_type", "original_name")
@@ -681,15 +682,29 @@ eml_write(ds,
   # it is easy in a spreadsheet to add the value labels but an
   # automation approach is here
   if(insert_labels){
-    if(!exists('dat'))   dat <- read.csv(infile, stringsAsFactors =  F)
-    lablist  <- reml_boilerplate(dat, enumerated = 1:3)
+    dat <- read.csv(infile, stringsAsFactors =  F)
+    enums <- NA
+    for(j in 1:ncol(dat)){
+      if(is.character(dat[,j])){
+        if(j == 1){
+          enums <- 1
+        } else {
+          enums <- c(enums, j)
+        }
+      }
+    }
+    #enums
+    #str(dat)
+    lablist  <- reml_boilerplate(dat, enumerated = enums)
     lablist <- lapply(lablist, names)
-    lablist <- lapply(lablist, paste, sep = "", collapse = " = ?; ")
+    maxnlabs <- max(sapply(lablist, length))
+    if(maxnlabs > 10) stop("more than 10 labels, try a different approach")
+    lablist <- lapply(lablist, paste, sep = "", collapse = " = ?; ")  
     lablist  <- do.call(rbind.data.frame, lablist)
     vl$value_labels <- lablist[,1]
   }
     
-  #vl
+  # vl
   return(vl)
   }
 #+end_src
@@ -705,10 +720,12 @@ eml_write(ds,
   load_all()
   
   
-  fpath <- system.file("extdata/civst_gend_sector_additional_variables.csv", package = "disentangle")
+  fpath <- "inst/extdata/civst_gend_sector_additional_variables.csv"
+  fpath <- "inst/extdata/civst_gend_sector.csv"
   fpath
   civst_gend_sector <- read.csv(fpath)
   civst_gend_sector$datevar <- as.Date(civst_gend_sector$datevar)
+  
   # changing names is something that we want to track
   names(civst_gend_sector) <- gsub("_", " ", names(civst_gend_sector))
   names(civst_gend_sector)  <- sapply(names(civst_gend_sector), upcase_string)
